--- a/.github/workflows/cli.yml
+++ b/.github/workflows/cli.yml
@@ -3,110 +3,119 @@ name: Build CLI
 on:
   push:
     tags:
-      - 'cli-*'
+      - "cli-*"
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-        
+
     steps:
-    - uses: actions/checkout@v1
+      - uses: actions/checkout@v1
 
-    - name: setup zip
-      uses: montudor/action-zip@v0.1.0
- 
-    - name: setup dotnet
-      uses: actions/setup-dotnet@v2
-      with:
-        dotnet-version: 7.0.x
+      - name: setup zip
+        uses: montudor/action-zip@v0.1.0
 
-    - name: publish dotnet
-      run: |
-        cd cli/Squidex.CLI/Squidex.CLI
-        dotnet publish -c Release
+      - name: setup dotnet
+        uses: actions/setup-dotnet@v2
+        with:
+          dotnet-version: 7.0.x
 
-    - name: publish win-x64
-      run: |
-        cd cli/Squidex.CLI/Squidex.CLI
-        dotnet publish -r win-x64 --self-contained -c Release /p:PublishSingleFile=true
+      - name: publish dotnet
+        run: |
+          cd cli/Squidex.CLI/Squidex.CLI
+          dotnet publish -c Release
 
-    - name: publish win-x86
-      run: |
-        cd cli/Squidex.CLI/Squidex.CLI
-        dotnet publish -r win-x86 --self-contained -c Release /p:PublishSingleFile=true
+      - name: publish win-x64
+        run: |
+          cd cli/Squidex.CLI/Squidex.CLI
+          dotnet publish -r win-x64 --self-contained -c Release /p:PublishSingleFile=true
 
-    - name: publish linux-x64
-      run: |
-        cd cli/Squidex.CLI/Squidex.CLI
-        dotnet publish -r linux-x64 --self-contained -c Release /p:PublishSingleFile=true
+      - name: publish win-x86
+        run: |
+          cd cli/Squidex.CLI/Squidex.CLI
+          dotnet publish -r win-x86 --self-contained -c Release /p:PublishSingleFile=true
 
-    - name: publish ubuntu-x64
-      run: |
-        cd cli/Squidex.CLI/Squidex.CLI
-        dotnet publish -r ubuntu-x64 --self-contained -c Release /p:PublishSingleFile=true
+      - name: publish linux-x64
+        run: |
+          cd cli/Squidex.CLI/Squidex.CLI
+          dotnet publish -r linux-x64 --self-contained -c Release /p:PublishSingleFile=true
 
-    - name: publish osx-x64
-      run: |
-        cd cli/Squidex.CLI/Squidex.CLI
-        dotnet publish -r osx-x64 --self-contained -c Release /p:PublishSingleFile=true
+      - name: publish ubuntu-x64
+        run: |
+          cd cli/Squidex.CLI/Squidex.CLI
+          dotnet publish -r ubuntu-x64 --self-contained -c Release /p:PublishSingleFile=true
 
-    - name: pack dotnet tool
-      run: |
-        cd cli/Squidex.CLI/Squidex.CLI
-        dotnet pack -p:PackDotnetTool=1 -c Release
+      - name: publish osx-x64
+        run: |
+          cd cli/Squidex.CLI/Squidex.CLI
+          dotnet publish -r osx-x64 --self-contained -c Release /p:PublishSingleFile=true
 
-    - name: push dotnet tool to nuget.org
-      run: |
-        cd cli/Squidex.CLI/Squidex.CLI/bin/Release
-        dotnet nuget push **/*.nupkg --source 'https://api.nuget.org/v3/index.json' --skip-duplicate -k ${{ secrets.nuget }}
+      - name: publish osx-arm64
+        run: |
+          cd cli/Squidex.CLI/Squidex.CLI
+          dotnet publish -r osx-arm64 --self-contained -c Release /p:PublishSingleFile=true
 
-    - name: pack core
-      run: |
-        cd cli/Squidex.CLI/Squidex.CLI.Core
-        dotnet pack -c Release
+      - name: pack dotnet tool
+        run: |
+          cd cli/Squidex.CLI/Squidex.CLI
+          dotnet pack -p:PackDotnetTool=1 -c Release
 
-    - name: push core to nuget.org
-      run: |
-        cd cli/Squidex.CLI/Squidex.CLI.Core/bin/Release
-        dotnet nuget push **/*.nupkg --source 'https://api.nuget.org/v3/index.json' --skip-duplicate -k ${{ secrets.nuget }}
+      - name: push dotnet tool to nuget.org
+        run: |
+          cd cli/Squidex.CLI/Squidex.CLI/bin/Release
+          dotnet nuget push **/*.nupkg --source 'https://api.nuget.org/v3/index.json' --skip-duplicate -k ${{ secrets.nuget }}
 
-    - name: create dir
-      run: |
-        mkdir cli/Squidex.CLI/Squidex.CLI/bin/Release/out
+      - name: pack core
+        run: |
+          cd cli/Squidex.CLI/Squidex.CLI.Core
+          dotnet pack -c Release
 
-    - name: archive dotnet
-      run: |
-        cd cli/Squidex.CLI/Squidex.CLI/bin/Release/net7.0/publish/
-        zip -r '../../out/dotnet.zip' *
-  
-    - name: archive win-x64
-      run: |
-        cd cli/Squidex.CLI/Squidex.CLI/bin/Release/net7.0/win-x64/publish/
-        zip -r '../../../out/win-x64.zip' *
-  
-    - name: archive win-x86
-      run: |
-        cd cli/Squidex.CLI/Squidex.CLI/bin/Release/net7.0/win-x86/publish/
-        zip -r '../../../out/win-x86.zip' *
-  
-    - name: archive linux-x64
-      run: |
-        cd cli/Squidex.CLI/Squidex.CLI/bin/Release/net7.0/linux-x64/publish/
-        zip -r '../../..//out/linux-x64.zip' *
-    
-    - name: archive ubuntu-x64
-      run: |
-        cd cli/Squidex.CLI/Squidex.CLI/bin/Release/net7.0/ubuntu-x64/publish/
-        zip -r '../../../out/ubuntu-x64.zip' *
+      - name: push core to nuget.org
+        run: |
+          cd cli/Squidex.CLI/Squidex.CLI.Core/bin/Release
+          dotnet nuget push **/*.nupkg --source 'https://api.nuget.org/v3/index.json' --skip-duplicate -k ${{ secrets.nuget }}
 
-    - name: archive osx-x64
-      run: |
-        cd cli/Squidex.CLI/Squidex.CLI/bin/Release/net7.0/osx-x64/publish/
-        zip -r '../../../out/osx-x64.zip' *
+      - name: create dir
+        run: |
+          mkdir cli/Squidex.CLI/Squidex.CLI/bin/Release/out
 
-    - name: release
-      uses: fnkr/github-action-ghr@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.project }}
-        GHR_PATH: 'cli/Squidex.CLI/Squidex.CLI/bin/Release/out/'
+      - name: archive dotnet
+        run: |
+          cd cli/Squidex.CLI/Squidex.CLI/bin/Release/net7.0/publish/
+          zip -r '../../out/dotnet.zip' *
+
+      - name: archive win-x64
+        run: |
+          cd cli/Squidex.CLI/Squidex.CLI/bin/Release/net7.0/win-x64/publish/
+          zip -r '../../../out/win-x64.zip' *
+
+      - name: archive win-x86
+        run: |
+          cd cli/Squidex.CLI/Squidex.CLI/bin/Release/net7.0/win-x86/publish/
+          zip -r '../../../out/win-x86.zip' *
+
+      - name: archive linux-x64
+        run: |
+          cd cli/Squidex.CLI/Squidex.CLI/bin/Release/net7.0/linux-x64/publish/
+          zip -r '../../..//out/linux-x64.zip' *
+
+      - name: archive ubuntu-x64
+        run: |
+          cd cli/Squidex.CLI/Squidex.CLI/bin/Release/net7.0/ubuntu-x64/publish/
+          zip -r '../../../out/ubuntu-x64.zip' *
+
+      - name: archive osx-x64
+        run: |
+          cd cli/Squidex.CLI/Squidex.CLI/bin/Release/net7.0/osx-x64/publish/
+          zip -r '../../../out/osx-x64.zip' *
+
+      - name: archive osx-arm64
+        run: |
+          cd cli/Squidex.CLI/Squidex.CLI/bin/Release/net7.0/osx-arm64/publish/
+          zip -r '../../../out/osx-arm64.zip' *
+
+      - name: release
+        uses: fnkr/github-action-ghr@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.project }}
+          GHR_PATH: "cli/Squidex.CLI/Squidex.CLI/bin/Release/out/"
